// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dispatch(notFound()): 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/not-found",
    "search": "",
    "state": Object {},
    "url": "/not-found",
  },
]
`;

exports[`dispatch(notFound()): 1 - history_index 1`] = `1`;

exports[`dispatch(notFound()): 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/not-found",
        "search": "",
        "state": Object {},
        "url": "/not-found",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/not-found",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "",
    "search": "",
    "status": 404,
    "url": "/not-found",
  },
  "notFoundUrl": undefined,
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "NOT_FOUND",
}
`;

exports[`dispatch(notFound()): 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`dispatch(notFound()): 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`dispatch(notFound()): 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/not-found",
        "search": "",
        "state": Object {},
        "url": "/not-found",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/not-found",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 404,
    "type": "NOT_FOUND",
    "universal": false,
    "url": "/not-found",
  },
  "title": "NOT_FOUND",
}
`;

exports[`dispatch(notFound()): 1 - title 1`] = `"NOT_FOUND"`;

exports[`dispatch(notFound(action, alternatePath)): 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/does-not-exist",
    "search": "",
    "state": Object {},
    "url": "/does-not-exist",
  },
]
`;

exports[`dispatch(notFound(action, alternatePath)): 1 - history_index 1`] = `1`;

exports[`dispatch(notFound(action, alternatePath)): 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/does-not-exist",
        "search": "",
        "state": Object {},
        "url": "/does-not-exist",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/does-not-exist",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "",
    "search": "",
    "status": 404,
    "url": "/does-not-exist",
  },
  "notFoundUrl": "/does-not-exist",
  "params": Object {
    "foo": "bar",
  },
  "query": Object {},
  "state": Object {},
  "type": "NOT_FOUND",
}
`;

exports[`dispatch(notFound(action, alternatePath)): 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`dispatch(notFound(action, alternatePath)): 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`dispatch(notFound(action, alternatePath)): 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/does-not-exist",
        "search": "",
        "state": Object {},
        "url": "/does-not-exist",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "foo": "bar",
    },
    "pathname": "/does-not-exist",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 404,
    "type": "NOT_FOUND",
    "universal": false,
    "url": "/does-not-exist",
  },
  "title": "NOT_FOUND",
}
`;

exports[`dispatch(notFound(action, alternatePath)): 1 - title 1`] = `"NOT_FOUND"`;

exports[`dispatch(notFound(alternatePath)): 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/does-not-exist",
    "search": "",
    "state": Object {},
    "url": "/does-not-exist",
  },
]
`;

exports[`dispatch(notFound(alternatePath)): 1 - history_index 1`] = `1`;

exports[`dispatch(notFound(alternatePath)): 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/does-not-exist",
        "search": "",
        "state": Object {},
        "url": "/does-not-exist",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/does-not-exist",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "",
    "search": "",
    "status": 404,
    "url": "/does-not-exist",
  },
  "notFoundUrl": "/does-not-exist",
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "NOT_FOUND",
}
`;

exports[`dispatch(notFound(alternatePath)): 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`dispatch(notFound(alternatePath)): 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`dispatch(notFound(alternatePath)): 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/does-not-exist",
        "search": "",
        "state": Object {},
        "url": "/does-not-exist",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/does-not-exist",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 404,
    "type": "NOT_FOUND",
    "universal": false,
    "url": "/does-not-exist",
  },
  "title": "NOT_FOUND",
}
`;

exports[`dispatch(notFound(alternatePath)): 1 - title 1`] = `"NOT_FOUND"`;

exports[`dispatch(notFound(alternatePath, forcedType)): 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
]
`;

exports[`dispatch(notFound(alternatePath, forcedType)): 1 - history_index 1`] = `0`;

exports[`dispatch(notFound(alternatePath, forcedType)): 1 - response 1`] = `
Object {
  "notFoundUrl": "/does-not-exist",
  "params": undefined,
  "type": "WRONG",
}
`;

exports[`dispatch(notFound(alternatePath, forcedType)): 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`dispatch(notFound(alternatePath, forcedType)): 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`dispatch(notFound(alternatePath, forcedType)): 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "WRONG",
}
`;

exports[`dispatch(notFound(alternatePath, forcedType)): 1 - title 1`] = `"FIRST"`;

exports[`dispatch(notFound(params)): 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/not-found",
    "search": "",
    "state": Object {},
    "url": "/not-found",
  },
]
`;

exports[`dispatch(notFound(params)): 1 - history_index 1`] = `1`;

exports[`dispatch(notFound(params)): 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/not-found",
        "search": "",
        "state": Object {},
        "url": "/not-found",
      },
    ],
    "from": null,
    "index": 1,
    "kind": "push",
    "length": 2,
    "pathname": "/not-found",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "scene": "",
    "search": "",
    "status": 404,
    "url": "/not-found",
  },
  "notFoundUrl": undefined,
  "params": Object {
    "foo": "bar",
  },
  "query": Object {},
  "state": Object {},
  "type": "NOT_FOUND",
}
`;

exports[`dispatch(notFound(params)): 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`dispatch(notFound(params)): 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`dispatch(notFound(params)): 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/not-found",
        "search": "",
        "state": Object {},
        "url": "/not-found",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {
      "foo": "bar",
    },
    "pathname": "/not-found",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 404,
    "type": "NOT_FOUND",
    "universal": false,
    "url": "/not-found",
  },
  "title": "NOT_FOUND",
}
`;

exports[`dispatch(notFound(params)): 1 - title 1`] = `"NOT_FOUND"`;

exports[`notFound on first load: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`notFound on first load: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`notFound on first load: firstRoute - /non-existent - 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/non-existent",
    "search": "",
    "state": Object {},
    "url": "/non-existent",
  },
]
`;

exports[`notFound on first load: firstRoute - /non-existent - 1 - history_index 1`] = `0`;

exports[`notFound on first load: firstRoute - /non-existent - 1 - initial_state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/non-existent",
        "search": "",
        "state": Object {},
        "url": "/non-existent",
      },
    ],
    "hash": "",
    "index": 0,
    "kind": "init",
    "length": 1,
    "params": Object {},
    "pathname": "/non-existent",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "universal": false,
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "NOT_FOUND",
    "universal": false,
    "url": "/non-existent",
  },
  "title": "@@redux/INIT",
}
`;

exports[`notFound on first load: firstRoute - /non-existent - 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/non-existent",
        "search": "",
        "state": Object {},
        "url": "/non-existent",
      },
    ],
    "from": null,
    "index": 0,
    "kind": "load",
    "length": 1,
    "pathname": "/non-existent",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "scene": "",
    "search": "",
    "status": 404,
    "url": "/non-existent",
  },
  "notFoundUrl": "/non-existent",
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "NOT_FOUND",
}
`;

exports[`notFound on first load: firstRoute - /non-existent - 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/non-existent",
        "search": "",
        "state": Object {},
        "url": "/non-existent",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/non-existent",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [],
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 404,
    "type": "NOT_FOUND",
    "universal": false,
    "url": "/non-existent",
  },
  "title": "NOT_FOUND",
}
`;

exports[`notFound on first load: firstRoute - /non-existent - 1 - title 1`] = `"NOT_FOUND"`;
